-
Bug
-
Resolution: Done
-
P2: Important
-
5.5.1, 5.6.0 Beta
-
-
f253f4c3310655933266f62e90f46fd12b5c49e4
When a mouse scroll is started in one widget e.g. QListWidget and before the scrolling ends moving the mouse cursor over another widget the scrolling continues there.
Use the attached test application to reproduce the issue.
1. Launch the app
2. Start the mouse scroll on the left QListWidget and immediately move mouse cursor over the other QListWidget on the right
The issue can be reproduced with Apple Magic Mouse and not with the Magic Trackpad.
- relates to
-
QTBUG-75485 An active WheelHandler should deactivate when another WheelHandler takes over
-
- Reported
-
-
QTBUG-56613 [macOS]: When a scroll is started in one ListView with the track pad and then the mouse is moved in another it will do the scroll there
-
- Closed
-
-
QTBUG-67032 Mouse Wheel event gets propagated even when event filter should stop it
-
- Closed
-
- resulted in
-
QTBUG-79102 Scrolling via trackpad does not when a widget is inside a QScrollArea
-
- Closed
-
| For Gerrit Dashboard: QTBUG-50199 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 148926,8 | Track target widget when wheel events are received | 5.6 | qt/qtbase | Status: MERGED | +2 | 0 |
| 150917,2 | Revert "Track target widget when wheel events are received" | 5.6 | qt/qtbase | Status: ABANDONED | 0 | 0 |