src/gui/kernel/qevent.h
@@ -1102,6 +1102,10 @@ name|int
 name|reserved
 operator|:
 literal|28
+block|;
+name|friend
+name|class
+name|QApplication
 block|; }
 decl_stmt|;
 end_decl_stmt
